docs(jdk-only,L1): HashMap's retirement blocker is one method, and the control is worse than the trial on three fields
§10 item 3 read "the state IS real and nine probes still move; whatever is
missing is not the bucket array". `apps/probes/L1MapFieldProbe.java` answers
it. It reads — reflectively, under `--add-opens=java.base/java.util=ALL-UNNAMED`
— the five fields real `HashMap$HashIterator` reads, on five receivers built
five ways, and prints SHAPES only: an array's length and component type, never
its contents.

Armed on `java/util/HashMap` alone, every field matches HotSpot 25.0.4+7 on
every receiver, `table` component type included. So `modCount`, `threshold`
and `loadFactor` are NOT the answer and the object model is not the problem.
One observable is left:

  armed:  keySet.size 3   values.size 3   entrySet.size 3
          keySet walk [a,b,c]   entry walk [a=1,b=2,c=3]
          keySet().toArray() 3   values().toArray() 3
          entrySet().toArray() 0          <- the whole blocker

The entry ITERATOR works and the entry SIZE is right, so real
`AbstractCollection.toArray()` should answer 3. Arming `AbstractCollection`,
`AbstractSet`, `AbstractMap`, `Set`, `Collection` and `Map` alongside changes
nothing, which by the dial's own blind spot points at a native reached from
inside a native rather than one declining at a door.

The same probe found three defects in the CONTROL that the retirement would
fix, and they were invisible until something read the fields:

  new HashMap<>() + 3 puts     threshold = 0    HotSpot 12
  new HashMap<>(64) + 3 puts   threshold = 64   HotSpot 48
  new HashMap<>(other)         table = [16]java.lang.Object   HotSpot [4]HashMap$Node
                               loadFactor = 0.0               HotSpot 0.75
  new HashMap<>(Map.of("a","1"))  same untyped table, same 0.0 loadFactor

An untyped `Object[]` in `HashMap.table` is the layout defect
`map_carrier_class_for_receiver` exists to prevent, on the one path that does
not go thr